# dsa_chapter_zip_codes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: lint-python.yml  pylint.yml  python.yml
scraper/: requirements.txt  scraper.py  zeros.py
src/: zeros.py
