[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["B", "W", "C"]
ignore = ["C400", "C401"]

[project]
name = "dsa_chapter_zip_codes"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/dsa_chapter_zip_codes" }
dependencies = [
    "pandas==2.2.3",
    "selenium==4.30.0",
    "tqdm==4.67.1",
    "zipcodes==1.3.0"
]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.8.3",
    "mypy==1.15.0",
    "pandas-stubs==2.2.3.250308",
    "pre-commit==4.2.0",
    "ruff==0.11.4",
]
