[project]
name = "dsa_chapter_zip_codes"
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/dsa_chapter_zip_codes" }
dependencies = [
    "pandas==2.3.3",
    "selenium==4.35.0",
    "tqdm==4.67.1",
    "zipcodes==1.3.0",
]

[project.optional-dependencies]
dev = [
    "bandit[toml,sarif]==1.8.3",
    "mypy==1.18.2",
    "pandas-stubs==2.3.2.250926",
    "pre-commit==4.2.0",
    "ruff==0.11.12",
    "types-tqdm==4.67.0.20250809",
    "types-selenium==3.141.9",
]

[tool.ruff]
line-length = 160
target-version = "py310"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "zipcodes",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "./tests/",
    "./.venv/",
]
